AC_PREREQ([2.71])
AC_INIT([s1-how-to-handle-join-in-exception-scenarios])

AC_CONFIG_SRCDIR([src/main.cc])

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects])

AC_PROG_CXX

AC_CONFIG_FILES([Makefile])

AC_OUTPUT